--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,7 +10,9 @@ phases:
       - aws --version
       - REPOSITORY_URI=137068237830.dkr.ecr.ap-south-1.amazonaws.com/javatechie-registry
       - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin $REPOSITORY_URI
+
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+      - DOCKER_CONTAINER_NAME=javatechie-registry   # 🔥 MUST MATCH ECS TASK CONTAINER NAME
 
   build:
     commands:
@@ -23,7 +25,10 @@ phases:
       - echo "Pushing Docker images"
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"course-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+
+      - echo "Creating imagedefinitions.json"
+      - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - cat imagedefinitions.json
 
 artifacts:
   files:
